# sample-smart-prescription-reader

./: .gitignore  README.md  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.kiro/specs/medication-identification/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
documentation/: architecture.md  improvements.md  security.md  technical_approach.md
notebooks/: .gitignore  README.md  medication names.ipynb  project.json  pyproject.toml
scripts/: generate-pdf-doc.sh
