[project]
name = "notebooks"
version = "1.0.0"
description = "Data preparation notebooks"
requires-python = ">=3.9,<4"
dependencies = [
    "jupyter",
    "notebook",
    "ipykernel",
    "rapidfuzz>=3.13.0",
    "numpy>=2.0.2",
]

[tool.ruff]
exclude = [
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM", # flake8-simplify
    "I",  # isort
]
fixable = ["ALL"]
